tests/baselines/reference/constantOverloadFunctionNoSubtypeError.errors.txt
==== tests/cases/compiler/constantOverloadFunctionNoSubtypeError.ts (3 errors) ====
    class Base { foo() { } }
    class Derived1 extends Base { bar() { } }
    class Derived2 extends Base { baz() { } }
    class Derived3 extends Base { biz() { } }
    
    function foo(tagName: 'canvas'): Derived3;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! constantOverloadFunctionNoSubtypeError.ts(6,1): error TS2154: Specialized overload signature is not assignable to any non-specialized signature.
    function foo(tagName:  'div'): Derived2;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! constantOverloadFunctionNoSubtypeError.ts(7,1): error TS2154: Specialized overload signature is not assignable to any non-specialized signature.
    function foo(tagName: 'span'): Derived1;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! constantOverloadFunctionNoSubtypeError.ts(8,1): error TS2154: Specialized overload signature is not assignable to any non-specialized signature.
    function foo(tagName: number): Base;
    function foo(tagName: any): Base {
    
        return null;
    }
    